--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "js-cookie": "2.2.0",
     "normalize.css": "7.0.0",
     "nprogress": "0.2.0",
+    "vue-monoplasty-slide-verify": "^1.3.1",
     "path-to-regexp": "2.4.0",
     "vue": "2.6.10",
     "vue-router": "3.0.6",
