首页跳转购票success

--- a/.env.development
+++ b/.env.development
@@ -3,5 +3,5 @@ ENV = 'development'
 
 # base api
 #VUE_APP_BASE_API = '/dev-api'
-#VUE_APP_BASE_API = 'http://localhost:8081'
-VUE_APP_BASE_API = 'http://48f4641b.r1.cpolar.top'
+VUE_APP_BASE_API = 'http://localhost:8081'
+#VUE_APP_BASE_API = 'http://48f4641b.r1.cpolar.top'
