--- a/package.json
+++ b/package.json
@@ -20,9 +20,9 @@
     "js-cookie": "2.2.0",
     "normalize.css": "7.0.0",
     "nprogress": "0.2.0",
-    "vue-monoplasty-slide-verify": "^1.3.1",
     "path-to-regexp": "2.4.0",
     "vue": "2.6.10",
+    "vue-monoplasty-slide-verify": "^1.3.1",
     "vue-router": "3.0.6",
     "vuex": "3.1.0"
   },
@@ -49,7 +49,8 @@
     "serve-static": "1.13.2",
     "svg-sprite-loader": "4.1.3",
     "svgo": "1.2.2",
-    "vue-template-compiler": "2.6.10"
+    "vue-template-compiler": "2.6.10",
+    "vue-wxlogin": "^1.0.4"
   },
   "browserslist": [
     "> 1%",
